fixed project images not showing

--- a/docs/css/_mobile.sass
+++ b/docs/css/_mobile.sass
@@ -32,7 +32,7 @@
                     span
                         font-size: 2em
                     .skill-meter
-                        height: 50px
+                        height: 35px
                         width: 70%
                         .progress
                             width: 80%
@@ -43,7 +43,7 @@
     .work-section
         h2    
             padding-top: 30px
-            font-size: 5em
+            font-size: 4em
             margin: 0 0 50px 30px
         #downarrow
             margin-top: 50px
