--- a/docs/css/_style.sass
+++ b/docs/css/_style.sass
@@ -103,15 +103,21 @@ nav
         justify-content: center
         a
             background-color: white
+            display: flex
             border-radius: 25px
-            width: 300px
+            width: 200px
             min-width: 300px
-            height: 500px
+            height: 400px
             margin: 0 30px 50px 30px
             box-shadow: 1px 4px 6px #000000b6
             overflow: hidden
             background-position: center
             background-size: cover
+            justify-content: center
+            align-content: center
+            img
+                width: 120%
+            
     #downarrow
         padding-bottom: 100px
         margin-bottom: 0
