--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -128,15 +128,21 @@ nav a {
 }
 .work-section .work-container a {
   background-color: white;
+  display: flex;
   border-radius: 25px;
-  width: 300px;
+  width: 200px;
   min-width: 300px;
-  height: 500px;
+  height: 400px;
   margin: 0 30px 50px 30px;
   box-shadow: 1px 4px 6px #000000b6;
   overflow: hidden;
   background-position: center;
   background-size: cover;
+  justify-content: center;
+  align-content: center;
+}
+.work-section .work-container a img {
+  width: 120%;
 }
 .work-section #downarrow {
   padding-bottom: 100px;
@@ -325,7 +331,7 @@ footer a {
     font-size: 2em;
   }
   .skills-section .skill-graph .graph-container .skill-group .skill-meter {
-    height: 50px;
+    height: 35px;
     width: 70%;
   }
   .skills-section .skill-graph .graph-container .skill-group .skill-meter .progress {
@@ -338,7 +344,7 @@ footer a {
 
   .work-section h2 {
     padding-top: 30px;
-    font-size: 5em;
+    font-size: 4em;
     margin: 0 0 50px 30px;
   }
   .work-section #downarrow {
